fix: breadcrumb wrap

--- a/sass/blocks/_breadcrumb.sass
+++ b/sass/blocks/_breadcrumb.sass
@@ -2,6 +2,7 @@
     &-list 
         list-style: none
         display: flex
+        flex-wrap: wrap
         align-items: center
         padding: 18px 0
         margin: 0
